# discourse-lm

./: .gitignore  README.md  pyproject.toml
skills/discourse-lm/: SKILL.md
skills/discourse-lm/scripts/: run_discourse_lm.sh
src/discourse_lm/: __init__.py  cli.py  discourse.py  markdown.py  notebooklm_adapter.py  pipeline.py
tests/: test_discourse.py  test_markdown.py
